@@ -17,10 +17,7 @@ import com.example.SBA_M.entity.queries.AdmissionEntriesDocument;
 import com.example.SBA_M.exception.AppException;
 import com.example.SBA_M.exception.ErrorCode;
 import com.example.SBA_M.mapper.UniversityMajorMapper;
-import com.example.SBA_M.repository.commands.AdmissionMethodRepository;
-import com.example.SBA_M.repository.commands.MajorRepository;
-import com.example.SBA_M.repository.commands.UniversityMajorRepository;
-import com.example.SBA_M.repository.commands.UniversityRepository;
+import com.example.SBA_M.repository.commands.*;
 import com.example.SBA_M.repository.queries.UniversityMajorReadRepository;
 import com.example.SBA_M.service.UniversityMajorService;
 import com.example.SBA_M.service.messaging.producer.UniversityMajorProducer;
@@ -46,6 +43,7 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
     private final UniversityMajorMapper universityMajorMapper;
     private final UniversityMajorProducer universityMajorProducer;
     private final UniversityMajorReadRepository universityMajorReadRepository;
+    private final SubjectCombinationRepostiory subjectCombinationService;
 
     @Override
     public PageResponse<UniversityMajorResponse> getAllUniversityMajors(int page, int size) {
@@ -68,7 +66,7 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
 
     @Override
     public UniversityMajorResponse getUniversityMajorById(Integer id) {
-        UniversityMajor um = universityMajorRepository.findByIdAndStatus(id, Status.ACTIVE)
+        UniversityMajor um = universityMajorRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.UNIVERSITY_MAJOR_NOT_FOUND));
         return universityMajorMapper.toResponse(um);
     }
@@ -80,7 +78,10 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
                 .orElseThrow(() -> new AppException(ErrorCode.UNIVERSITY_NOT_FOUND));
         Major major = majorRepository.findByIdAndStatus(request.getMajorId(), Status.ACTIVE)
                 .orElseThrow(() -> new AppException(ErrorCode.MAJOR_NOT_FOUND));
-
+        List<SubjectCombination> subjectCombination = subjectCombinationService.findAllById(request.getSubjectCombinationIds());
+        if (subjectCombination.size() != request.getAdmissionMethodIds().size()) {
+            throw new AppException(ErrorCode.INVALID_PARAM, "Some admission methods not found");
+        }
         List<AdmissionMethod> methods = admissionMethodRepository.findAllById(request.getAdmissionMethodIds());
         if (methods.size() != request.getAdmissionMethodIds().size()) {
             throw new AppException(ErrorCode.INVALID_PARAM, "Some admission methods not found");
@@ -90,7 +91,8 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
         entity.setUniversity(university);
         entity.setMajor(major);
         entity.setAdmissionMethods(methods);
-        entity.setYear(request.getYear());
+        entity.setSubjectCombinations(subjectCombination);
+        entity.setUniversityMajorName(request.getUniversityMajorName());
         entity.setScore(request.getScores());
         entity.setQuota(request.getQuota());
         entity.setNotes(request.getNotes());
@@ -103,12 +105,12 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
     @Override
     @Transactional
     public UniversityMajorResponse updateUniversityMajor(Integer id, UniversityMajorRequest request) {
-        UniversityMajor existing = universityMajorRepository.findByIdAndStatus(id, Status.ACTIVE)
+        UniversityMajor existing = universityMajorRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.UNIVERSITY_MAJOR_NOT_FOUND));
 
         List<Integer> methodIds = request.getAdmissionMethodIds();
         List<AdmissionMethod> methods = admissionMethodRepository.findAllByIdInAndStatus(methodIds, Status.ACTIVE);
-
+        List<SubjectCombination> subjectCombinations = subjectCombinationService.findAllById(request.getSubjectCombinationIds());
         Set<Integer> foundIds = methods.stream()
                 .map(AdmissionMethod::getId)
                 .collect(Collectors.toSet());
@@ -122,10 +124,11 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
         }
 
         existing.setAdmissionMethods(methods);
+        existing.setSubjectCombinations(subjectCombinations);
         existing.setScore(request.getScores());
         existing.setQuota(request.getQuota());
         existing.setNotes(request.getNotes());
-        existing.setYear(request.getYear());
+        existing.setUniversityMajorName(request.getUniversityMajorName());
 
         UniversityMajor saved = universityMajorRepository.save(existing);
         universityMajorProducer.sendCreateEvents(saved);
@@ -146,12 +149,10 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
     public AdmissionUniversityTuitionResponse getAdmissionYearGroupsByUniversityId(Integer universityId) {
         List<AdmissionEntriesDocument> entries = universityMajorReadRepository
                 .findByUniversityIdAndStatus(universityId, Status.ACTIVE);
-
         if (entries.isEmpty()) {
             return null;
         }
-
-        String universityName = entries.get(0).getUniversityName();
+        String universityName = entries.getFirst().getUniversityName();
 
         // Group data: year -> method -> major -> subjectCombination
         Map<Integer, Map<Integer, Map<Long, List<AdmissionEntriesDocument>>>> grouped = new TreeMap<>(Collections.reverseOrder());
@@ -177,10 +178,9 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
                                         .map(AdmissionEntriesDocument::getMethodName)
                                         .orElse(null);
 
-                                List<MajorEntry> majors = methodEntry.getValue().entrySet().stream()
-                                        .map(majorEntry -> {
-                                            List<AdmissionEntriesDocument> docs = majorEntry.getValue();
-                                            AdmissionEntriesDocument any = docs.get(0);
+                                List<MajorEntry> majors = methodEntry.getValue().values().stream()
+                                        .map(docs -> {
+                                            AdmissionEntriesDocument any = docs.getFirst();
 
                                             List<SubjectCombinationTuitionScore> scores = docs.stream()
                                                     .map(d -> new SubjectCombinationTuitionScore(
@@ -218,8 +218,6 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
                 years
         );
     }
-
-
     @Override
     public MajorAdmissionResponse getMajorAdmissionByUniversityAndMajor(Integer universityId, Long majorId) {
         List<AdmissionEntriesDocument> entries = universityMajorReadRepository
@@ -236,8 +234,8 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
         }
 
         // Extract static info from the first entry
-        String universityName = entries.get(0).getUniversityName();
-        String majorName = entries.get(0).getMajorName();
+        String universityName = entries.getFirst().getUniversityName();
+        String majorName = entries.getFirst().getMajorName();
 
         // Grouping: year -> methodId -> methodName -> subjectCombination -> score + note
         Map<Integer, Map<Integer, Map<String, SubjectCombinationScore>>> grouped = new TreeMap<>(Collections.reverseOrder());
@@ -292,8 +290,8 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
             return null;
         }
 
-        String universityName = entries.get(0).getUniversityName();
-        String subjectCombination = entries.get(0).getSubjectCombination();
+        String universityName = entries.getFirst().getUniversityName();
+        String subjectCombination = entries.getFirst().getSubjectCombination();
 
         // Map to avoid repeated method name lookups
         Map<Integer, String> methodNameMap = entries.stream()
